--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 useContext instead of localStorage
 
 # TODO
-1. Download Structure CSV
+1. Download Structure CSV [done]
 2. Upload Leads via CSV
 3. Reports
 4. Invite Members
